--- a/src/css/inputAddressStyle.css
+++ b/src/css/inputAddressStyle.css
@@ -26,7 +26,7 @@
 }
 .info_input{
     flex:1;
-    margin-left: 0.1rem;
+    margin:0 0 0.01rem 0.1rem;
     outline: none;
 }
 .address_info_area{
