--- a/src/css/inputAddressStyle.css
+++ b/src/css/inputAddressStyle.css
@@ -1,23 +1,19 @@
-.input_box{
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background:#F3F5F7;
-}
 .new_build_address{
-   composes:bgColorF from '../Util/base.css';
+    background:#FFF;
 }
 .address_info{
     display: flex;
     height: 0.9rem;
     line-height: 0.9rem;
     border-bottom: 0.01rem solid #EEEFF3;
-    padding-left: 0.3rem;
+
 }
 .info_desc{
-    composes:f30 c333 from '../Util/base.css';
+    width:1.4rem;
+    composes:f30 from '../Util/huipayWaterBase.css';
+    color:#333;
+    line-height:0.9rem;
+    padding-left: 0.2rem;
 }
 .tag_list{
     display:flex;
@@ -26,7 +22,7 @@
 }
 .info_input{
     flex:1;
-    margin:0 0 0.01rem 0.1rem;
+    margin-bottom:0.01rem;
     outline: none;
 }
 .address_info_area{
