修改了 附近地址 无限刷新的bug

--- a/src/css/createOrEditStyle.css
+++ b/src/css/createOrEditStyle.css
@@ -11,5 +11,10 @@
     height:0.8rem;
     background:#399cfe;
     color:#FFF;
-
+}
+.cant_save_btn{
+    margin:0.8rem 0.3rem 0;
+    height:0.8rem;
+    background:#999;
+    color:#FFF;
 }
