--- a/src/css/createOrderStyle.css
+++ b/src/css/createOrderStyle.css
@@ -106,7 +106,7 @@
 .product_price{
     display:flex;
     flex-direction: row;
-    align-items: flex-end;
+    align-items: baseline;
 }
 .product_price_title{
     color:#ff2d2d;
@@ -200,9 +200,10 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    align-items: flex-start;
+    align-items: flex-end;
     width:1.65rem;
     line-height:0.42rem;
+    padding:0 0.2rem 0.25rem 0;
 }
 .product_reduce{
     width:0.42rem;
