--- a/src/css/waterTicketsStyle.css
+++ b/src/css/waterTicketsStyle.css
@@ -6,6 +6,9 @@
     height:100%;
     background:#F3F5F7;
 }
+.list{
+    padding-bottom:1rem;
+}
 .water_ticket{
     display:flex;
     flex-direction: row;
@@ -77,4 +80,47 @@
     -moz-border-radius: 0.43rem;
     border-radius: 0.43rem;
     color:#FFF;
+}
+.product_item_ctrl{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: flex-end;
+    width:1.65rem;
+    line-height:0.42rem;
+}
+.product_reduce{
+    width:0.42rem;
+    height:0.42rem;
+    background: url("../images/reduce@2x.png") no-repeat center;
+    -webkit-background-size: 0.42rem;
+    background-size: 0.42rem;
+}
+.product_count{
+    margin-left:0.1rem;
+    width:0.55rem;
+    font-size:0.4rem;
+    composes: search_black from '../Util/huipayWaterBase.css';
+    composes: tc from '../Util/base.css';
+}
+.product_increase{
+    margin-left:0.1rem;
+    width:0.42rem;
+    height:0.42rem;
+    background: url("../images/increase@2x.png") no-repeat center;
+    -webkit-background-size: 0.42rem;
+    background-size: 0.42rem;
+}
+.footer{
+    position:fixed;
+    bottom:0;
+    height:0.96rem;
+    background:#FFF;
+    width:100%;
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    composes:f36 from '../Util/huipayWaterBase.css';
+    color: #399cfe;
 }
