--- a/src/css/shopStyle.css
+++ b/src/css/shopStyle.css
@@ -22,6 +22,7 @@
     position: fixed;
     max-height:5.62rem;
     bottom: 0.9rem;
+    padding-bottom:0.3rem;
     width:100%;
     background:#FFF;
     z-index: 12;
