--- a/src/css/productInfoStyle.css
+++ b/src/css/productInfoStyle.css
@@ -1,8 +1,12 @@
 .wrap{
+    background:#F3F5F7;
     position:fixed;
+    top:0;
+    left:0;
     width:100%;
     height:100%;
-    background:#F3F5F7;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
 }
 .product_pic_box{
     height:7.5rem;
@@ -73,4 +77,16 @@
     background: url("../images/reduce@2x.png") no-repeat center;
     -webkit-background-size: 0.42rem;
     background-size: 0.42rem;
+}
+.add_btn{
+    padding:0.02rem 0.3rem;
+    height:0.4rem;
+    line-height:0.4rem;
+    -webkit-border-radius: 0.4rem;
+    -moz-border-radius: 0.4rem;
+    border-radius: 0.4rem;
+    color:#FFF;
+    composes: f24 from '../Util/huipayWaterBase.css';
+    composes: linear_blue_bg from '../Util/huipayWaterBase.css';
+    font-size:0.26rem;
 }
