--- a/src/css/commentStyle.css
+++ b/src/css/commentStyle.css
@@ -1,6 +1,7 @@
 .comment_bg{
-    margin:0.24rem 0 1.5rem;
+    margin-top:0.24rem;
     background:#FFF;
+    padding-bottom:1.5rem;
 }
 .title{
     padding-left:0.3rem;
@@ -46,9 +47,18 @@
     display:flex;
     flex-direction: column;
     justify-content: space-between;
-    height:0.6rem;
+    height:0.7rem;
     padding-left:0.12rem;
     composes: f30 from '../Util/huipayWaterBase.css';
+}
+.star_list{
+    display:flex;
+    flex-direction: row;
+}
+.star{
+    width:0.2rem;
+    height:0.2rem;
+    margin-right:0.05rem;
 }
 .comment_time{
     font-size:0.24rem;
