--- a/src/css/createOrderStyle.css
+++ b/src/css/createOrderStyle.css
@@ -23,6 +23,15 @@
     color:#666;
     padding-left:0.2rem;
 }
+.pay_way_box{
+    outline:none;
+    appearance:none;
+    -moz-appearance:none;
+    -webkit-appearance:none;
+    border:0;
+    padding-right:0.3rem;
+}
+
 .pay_way_selected{
     composes: f26 from '../Util/huipayWaterBase.css';
     color:#333;
