--- a/src/css/createOrderStyle.css
+++ b/src/css/createOrderStyle.css
@@ -23,6 +23,9 @@
     color:#666;
     padding-left:0.2rem;
 }
+.pay_way_online{
+    padding-right:0.2rem;
+}
 .pay_way_box{
     outline:none;
     appearance:none;
